--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="blocChat">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
+    <title>Bloc Chat</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <h4>Hello, World???</h4>
+    <ui-view></ui-view>
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <!-- AngularUI Router -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <!-- FireBase -->
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBZ-E1n2v1AWU5lRMDYmFHUW6i-HHdvCAY",
+        authDomain: "bloc-chat-bb0a1.firebaseapp.com",
+        databaseURL: "https://bloc-chat-bb0a1.firebaseio.com",
+        projectId: "bloc-chat-bb0a1",
+        storageBucket: "",
+        messagingSenderId: "371555767355"
+      };
+      firebase.initializeApp(config);
+    </script>
+    <!-- Application Files -->
     <script src="/scripts/app.js"></script>
+    <!-- Controller Files -->
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
 </body>
 </html>
