--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <h4>Hello, World???</h4>
     <ui-view></ui-view>
     <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
@@ -32,5 +31,7 @@
     <script src="/scripts/app.js"></script>
     <!-- Controller Files -->
     <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/RoomCtrl.js"></script>
+    <script src="/scripts/services/Room.js"></script>
 </body>
 </html>
