--- a/app/index.html
+++ b/app/index.html
@@ -3,35 +3,62 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Chat</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/styles/main.css">
 </head>
-<body>
-    <ui-view></ui-view>
-    <!-- Angular -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <!-- AngularUI Router -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
-    <!-- FireBase -->
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
-    <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyBZ-E1n2v1AWU5lRMDYmFHUW6i-HHdvCAY",
-        authDomain: "bloc-chat-bb0a1.firebaseapp.com",
-        databaseURL: "https://bloc-chat-bb0a1.firebaseio.com",
-        projectId: "bloc-chat-bb0a1",
-        storageBucket: "",
-        messagingSenderId: "371555767355"
-      };
-      firebase.initializeApp(config);
-    </script>
-    <!-- Application Files -->
-    <script src="/scripts/app.js"></script>
-    <!-- Controller Files -->
-    <script src="/scripts/controllers/HomeCtrl.js"></script>
-    <script src="/scripts/controllers/RoomCtrl.js"></script>
-    <script src="/scripts/services/Room.js"></script>
-</body>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 sidebar">
+                    <div ng-controller="ModalAddRoomCtrl as modal">
+                        <h2>Bloc Chat</h2>
+                        <button class=type="button" class="btn btn-default" ng-click="modal.open()">Create new room</button>
+                    </div>
+                    <div ng-controller="RoomCtrl as room">
+                        <div>
+                            <ul class="list-unstyled roomlist">
+                                <li ng-repeat="roomName in room.all">{{ roomName.$value }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <ui-view></ui-view>
+                </div>
+            </div>
+        </div>
+        <!-- Angular -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-sanitize.js"></script>
+        <!-- AngularUI Router -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+        <!-- FireBase -->
+        <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+        <!-- AngularFire -->
+        <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+        <script>
+          // Initialize Firebase
+          var config = {
+            apiKey: "AIzaSyBZ-E1n2v1AWU5lRMDYmFHUW6i-HHdvCAY",
+            authDomain: "bloc-chat-bb0a1.firebaseapp.com",
+            databaseURL: "https://bloc-chat-bb0a1.firebaseio.com",
+            projectId: "bloc-chat-bb0a1",
+            storageBucket: "",
+            messagingSenderId: "371555767355"
+          };
+          firebase.initializeApp(config);
+        </script>
+        <!-- Application Files -->
+        <script src="/scripts/app.js"></script>
+        <!-- Controller Files -->
+        <script src="/scripts/controllers/HomeCtrl.js"></script>
+        <script src="/scripts/controllers/RoomCtrl.js"></script>
+        <script src="/scripts/controllers/ModalAddRoomCtrl.js"></script>
+        <script src="/scripts/controllers/ModalInstanceControl.js"></script>
+        <script src="/scripts/services/Room.js"></script>
+
+        <!-- AngularUI Bootstrap -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+    </body>
 </html>
