--- a/app/index.html
+++ b/app/index.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
     <body>
-        <div class="container">
+        <div class="container" ng-controller="HomeCtrl as home">
             <div class="row">
-                <div class="col-md-2 sidebar">
-                    <div ng-controller="ModalAddRoomCtrl as modal">
+                <div class="sidebar col-md-3 no-float">
+                    <div>
                         <h2>Bloc Chat</h2>
+                    </div>
+                    <div ng-controller="ModalAddRoomCtrl as modal">
                         <button class=type="button" class="btn btn-default" ng-click="modal.open()">Create new room</button>
                     </div>
                     <div ng-controller="RoomCtrl as room">
                         <div>
-                            <ul class="list-unstyled roomlist">
-                                <li ng-repeat="roomName in room.all">{{ roomName.$value }}</li>
+                            <ul class="list-unstyled room-list">
+                                <li ng-repeat="roomObject in room.all">
+                                    <span class="room-item" ng-click="room.setRoom(roomObject); home.roomMessages(roomObject)">{{ roomObject.$value }}</span>
+                                </li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="message-container col-md-9 no-float">
                     <ui-view></ui-view>
                 </div>
             </div>
@@ -57,6 +61,7 @@
         <script src="/scripts/controllers/ModalAddRoomCtrl.js"></script>
         <script src="/scripts/controllers/ModalInstanceControl.js"></script>
         <script src="/scripts/services/Room.js"></script>
+        <script src="/scripts/services/Message.js"></script>
 
         <!-- AngularUI Bootstrap -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
