--- a/app/index.html
+++ b/app/index.html
@@ -54,11 +54,12 @@
         <script src="/scripts/app.js"></script>
         <!-- Controller Files -->
         <script src="/scripts/controllers/HomeCtrl.js"></script>
+        <script src="/scripts/controllers/UserAdminCtrl.js"></script>
         <script src="/scripts/controllers/ModalAddRoomCtrl.js"></script>
         <script src="/scripts/controllers/ModalRoomInstanceControl.js"></script>
-        <script src="/scripts/BlocChatCookies.js"></script>
         <script src="/scripts/controllers/ModalUserInstanceControl.js"></script>
         <script src="/scripts/services/Room.js"></script>
+        <script src="/scripts/services/Auth.js"></script>
         <script src="/scripts/services/Message.js"></script>
 
         <!-- AngularUI Bootstrap -->
